--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'java'
 }
 
-sourceCompatibility = 16
-targetCompatibility = 16
+sourceCompatibility = 17
+targetCompatibility = 17
 
 group 'com.catkatpowered.katserver'
 version '1.0-SNAPSHOT'
@@ -23,6 +23,7 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 
     implementation group: 'io.javalin', name: 'javalin', version: '4.2.0'
+    implementation 'com.typesafe:config:1.4.1'
 }
 
 test {
