--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/io.javalin/javalin
     implementation 'io.javalin:javalin:4.2.0'
-    
+
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'org.yaml:snakeyaml:1.30'
@@ -48,6 +48,10 @@ shadowJar {
                 "Multi-Release": true
         )
     }
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
 
 test {
