--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'maven-publish'
     id 'java'
 }
 
@@ -50,6 +51,23 @@ dependencies {
 
 }
 
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allSource
+    archiveClassifier.convention('sources')
+    archiveClassifier.set('sources')
+}
+
+task javadocJar(type: Jar) {
+    from javadoc
+    archiveClassifier.convention('javadocs')
+    archiveClassifier.set('javadocs')
+}
+
+javadoc {
+    options.addBooleanOption('html5', true)
+    options.encoding('utf-8')
+}
+
 shadowJar {
     manifest {
         attributes(
@@ -65,4 +83,24 @@ tasks.withType(JavaCompile) {
 
 test {
     useJUnitPlatform()
+}
+
+publishing {
+    repositories {
+        maven {
+            url = uri(project.findProperty("repository_root_url") ?: System.getenv("REPOSITORY_ROOT_URL")
+                    + (project.version.toString().endsWith('dev') ? 'snapshots' : 'releases'))
+            credentials {
+                username = project.findProperty("repository_user") ?: System.getenv("REPOSITORY_USER")
+                password = project.findProperty("repository_token") ?: System.getenv("REPOSITORY_TOKEN")
+            }
+        }
+    }
+    publications {
+        mavenJava(MavenPublication) {
+            artifact(jar)
+            artifact(sourcesJar)
+            artifact(javadocJar)
+        }
+    }
 }
