👷 Chore: #Publish Add Github Actions publish package settings.

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ sourceCompatibility = 17
 targetCompatibility = 17
 
 group 'com.catkatpowered.katserver'
-version '1.0-SNAPSHOT'
+version '1.0.0-dev'
 
 repositories {
     mavenCentral()
