--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,22 +11,19 @@ network_port: 25565
 # 4. sqlite
 database_type: sqlite
 
-# If you choose sqlite, you don't have to add anything.
+# If you choose sqlite, you don't have to add anything auth.
 # Twice, it only for development!
-
-# If you choose mongodb, you must add those yaml content
+# Use mysql postgresql or mongodb you need to add auth.
 #
-#mongodb:
-#  connection_url:
-#  password:
-#  username:
-
-# If you choose mysql, you must add those yaml content
+# demo database_url:
+# postgresql: postgresql://localhost:5432/database_name
+# mysql: mysql://localhost:3306/database_name
+# mongodb: mongodb://localhost:27017/database_name
 #
-#mysql:
-#  connection_url:
-#  password:
-#  username:
+# Note: No need to carry username and password in url
+database_url:
+database_username:
+database_password:
 
 ####################### Storage ###############################
 # The resource file storage
