--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -22,4 +22,4 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle (build)
-        run: ./gradlew build
+        run: ./gradlew build -x test
