🚧 Feat: FINALLY finished SSL.

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,10 @@ dependencies {
     implementation 'mysql:mysql-connector-java:5.1.49'
     // https://mvnrepository.com/artifact/org.postgresql/postgresql
     implementation 'org.postgresql:postgresql:42.3.1'
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk15on
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
 
 }
 
@@ -75,7 +79,7 @@ javadoc {
 shadowJar {
     manifest {
         attributes(
-                'Main-Class': 'com.catkatpowered.katserver.KatServer',
+                'Main-Class': 'com.catkatpowered.katserver.KatServerMain',
                 "Multi-Release": true
         )
     }
