--- a/build.gradle
+++ b/build.gradle
@@ -96,8 +96,8 @@ test {
 publishing {
     repositories {
         maven {
-            url = uri(project.findProperty("repository_root_url") ?: System.getenv("REPOSITORY_ROOT_URL")
-                    + (project.version.toString().endsWith('dev') ? 'snapshots' : 'releases'))
+            url = uri((project.findProperty("repository_root_url") ?: System.getenv("REPOSITORY_ROOT_URL"))
+                    + (project.version.toString().endsWith('release') ? 'releases' : 'snapshots'))
             credentials {
                 username = project.findProperty("repository_user") ?: System.getenv("REPOSITORY_USER")
                 password = project.findProperty("repository_token") ?: System.getenv("REPOSITORY_TOKEN")
