--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,40 +1,50 @@
 ######################### Network #############################
-network_port: 25565
+network:
+  network_port: 25565
 
 ######################### Database ############################
-# The SQLite only for development!
-#
-# You can choose those type of database:
-# 1. postgresql
-# 2. mysql
-# 3. mongodb
-# 4. sqlite
-database_type: sqlite
+database:
+  # The SQLite only for development!
+  #
+  # You can choose those type of database:
+  # 1. postgresql
+  # 2. mysql
+  # 3. mongodb
+  # 4. sqlite
+  database_type: sqlite
 
-# If you choose sqlite, you don't have to add anything auth.
-# Twice, it only for development!
-# Use mysql postgresql or mongodb you need to add auth.
-#
-# demo database_url:
-# postgresql: postgresql://localhost:5432/database_name
-# mysql: mysql://localhost:3306/database_name
-# mongodb: mongodb://localhost:27017/database_name
-#
-# Note: No need to carry username and password in url
-database_url:
-database_username:
-database_password:
+  # If you choose sqlite, you don't have to add anything auth.
+  # Twice, it only for development!
+  # Use mysql postgresql or mongodb you need to add auth.
+  #
+  # demo database_url:
+  # postgresql: postgresql://localhost:5432/database_name
+  # mysql: mysql://localhost:3306/database_name
+  # mongodb: mongodb://localhost:27017/database_name
+  #
+  # Note: No need to carry username and password in url
+  database_url:
+  database_username:
+  database_password:
 
 ####################### Storage ###############################
 # The resource file storage
-#
-# You can choose those type of resource_storage
-# 1.local
-resource_storage: local
+resource:
+  # You can choose those type of resource_storage
+  # 1.local
+  resource_storage: local
 
-# If you choose `local`,
-# you can set the resource file where to store.
-data_folder_path: "./data"
+  # If you choose `local`,
+  # you can set the resource file where to store.
+  data_folder_path: "./data"
 
 ####################### ExecThreads ############################
-exec_threads: 16
+exec:
+  exec_threads: 16
+
+####################### TokenPool ##############################
+# This section are the settings of token pool
+
+tokenpool:
+  # You can set the token how long to live
+  outdate: 10
