--- a/.github/workflows/database.yml
+++ b/.github/workflows/database.yml
@@ -27,7 +27,7 @@ jobs:
           mongodb-version: 4.4
 
       - name: Run Gradle test
-        run: ./gradlew test --tests --stacktrace "com.catkatpowered.katserver.database.MongoDBDatabaseTest"
+        run: ./gradlew test --tests --stacktrace "com.catkatpowered.katserver.database.TestMongoDBDatabase"
 
       - name: Upload fail reports
         uses: actions/upload-artifact@v2
