--- a/.github/workflows/database.yml
+++ b/.github/workflows/database.yml
@@ -2,9 +2,9 @@ name: Database Test Github Actions
 
 on:
   push:
-    branches: [ main ]
+    branches: [main, ci]
   pull_request:
-    branches: [ main ]
+    branches: [main, ci]
 
 jobs:
   mongodb:
