--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -2,9 +2,9 @@ name: Verify Build Github Actions
 
 on:
   push:
-    branches: [ main ]
+    branches: [main, ci]
   pull_request:
-    branches: [ main ]
+    branches: [main, ci]
 
 jobs:
   build:
