--- a/.github/workflows/test-tokenpool.yml
+++ b/.github/workflows/test-tokenpool.yml
@@ -27,7 +27,7 @@ jobs:
           mongodb-version: 4.4
 
       - name: Run Gradle test
-        run: ./gradlew test --tests --stacktrace "com.catkatpowered.katserver.database.TestKatTokenPool"
+        run: ./gradlew test --tests --stacktrace "com.catkatpowered.katserver.tokenpool.TestKatTokenPool"
 
       - name: Upload fail reports
         uses: actions/upload-artifact@v2
