--- a/.github/workflows/test-tokenpool.yml
+++ b/.github/workflows/test-tokenpool.yml
@@ -7,7 +7,7 @@ on:
     branches: [main, ci]
 
 jobs:
-  mongodb:
+  tokenpool:
     runs-on: ubuntu-latest
     if: "! contains(github.event.head_commit.message, '#Skip')"
     steps:
@@ -21,11 +21,6 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Set up MongoDB 4.4
-        uses: supercharge/mongodb-github-action@1.7.0
-        with:
-          mongodb-version: 4.4
-
       - name: Run Gradle test
         run: ./gradlew test --tests --stacktrace "com.catkatpowered.katserver.tokenpool.TestKatTokenPool"
 
@@ -33,5 +28,5 @@ jobs:
         uses: actions/upload-artifact@v2
         if: failure()
         with:
-          name: mongodb-test-failure
+          name: tokenpool-test-failure
           path: build/reports
