--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,22 +4,8 @@ network:
 
 ######################### Database ############################
 database:
-  # The SQLite only for development!
-  #
-  # You can choose those type of database:
-  # 1. postgresql
-  # 2. mysql
-  # 3. mongodb
-  # 4. sqlite
-  database_type: sqlite
-
-  # If you choose sqlite, you don't have to add anything auth.
-  # Twice, it only for development!
-  # Use mysql postgresql or mongodb you need to add auth.
-  #
+  # default support mongodb
   # demo database_url:
-  # postgresql: postgresql://localhost:5432/database_name
-  # mysql: mysql://localhost:3306/database_name
   # mongodb: mongodb://localhost:27017/database_name
   #
   # Note: No need to carry username and password in url
