--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,9 @@
 ######################### Network #############################
 network:
   network_port: 25565
+  slefgen_cert:
+    cert_password: "catmoe"
+    cert_alias: "catmoe"
   custom_cert:
     enable: false
     cert_path: "./cert.jks"
