--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ sourceCompatibility = 17
 targetCompatibility = 17
 
 group 'com.catkatpowered.katserver'
-version '1.0.0-dev'
+version '1.0.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -90,7 +90,7 @@ publishing {
     repositories {
         maven {
             url = uri((project.findProperty("repository_root_url") ?: System.getenv("REPOSITORY_ROOT_URL"))
-                    + (project.version.toString().endsWith('release') ? 'releases' : 'snapshots'))
+                    + (project.version.toString().endsWith('-SNAPSHOT') ? 'snapshots' : 'releases'))
             credentials {
                 username = project.findProperty("repository_user") ?: System.getenv("REPOSITORY_USER")
                 password = project.findProperty("repository_token") ?: System.getenv("REPOSITORY_TOKEN")
