--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,11 +1,11 @@
 ######################### Network #############################
 network:
   network_port: 25565
-  slefgen_cert:
+  selfgen_cert:
     cert_password: "catmoe"
     cert_alias: "catmoe"
   custom_cert:
-    enable: false
+    enabled: false
     cert_path: "./cert.jks"
     cert_password: "catmoe"
 
