--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation 'com.google.guava:guava:31.0.1-jre'
 
     // https://mvnrepository.com/artifact/org.tomlj/tomlj
-    implementation group: 'org.tomlj', name: 'tomlj', version: '1.1.0'
+    implementation 'org.tomlj:tomlj:1.1.0'
 
     // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
     implementation 'org.mongodb:mongo-java-driver:3.12.10'
