:bug: Fix: try to fix test

--- a/.github/workflows/test-network.yml
+++ b/.github/workflows/test-network.yml
@@ -27,7 +27,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Run Gradle test
-        run: ./gradlew test --tests --stacktrace "com.catkatpowered.katserver.network.TestKatNetwork"
+        run: ./gradlew test -i --tests --stacktrace "com.catkatpowered.katserver.network.TestKatNetwork"
 
       - name: Upload fail reports
         uses: actions/upload-artifact@v2
