--- a/.github/workflows/test-database.yml
+++ b/.github/workflows/test-database.yml
@@ -27,7 +27,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Run Gradle test
-        run: ./gradlew test --tests --stacktrace "com.catkatpowered.katserver.database.TestMongoDBDatabase"
+        run: ./gradlew test -i --tests --stacktrace "com.catkatpowered.katserver.database.TestMongoDBDatabase"
 
       - name: Upload fail reports
         uses: actions/upload-artifact@v2
