--- a/.github/workflows/test-event.yml
+++ b/.github/workflows/test-event.yml
@@ -22,7 +22,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Run Gradle test
-        run: ./gradlew test --tests --stacktrace "com.catkatpowered.katserver.event.TestEventBus"
+        run: ./gradlew test -i --tests --stacktrace "com.catkatpowered.katserver.event.TestEventBus"
 
       - name: Upload fail reports
         uses: actions/upload-artifact@v2
