--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/io.javalin/javalin
     implementation 'io.javalin:javalin:5.1.2'
+    //implementation 'io.javalin.community.ssl:ssl-plugin:5.1.2'
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation 'com.google.code.gson:gson:2.8.9'
