--- a/.github/workflows/test-utils.yml
+++ b/.github/workflows/test-utils.yml
@@ -11,12 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     if: "! contains(github.event.head_commit.message, '#Skip')"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: adopt
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
@@ -25,7 +26,7 @@ jobs:
         run: ./gradlew test -i --tests --stacktrace "com.catkatpowered.katserver.common.utils.TestShaUtils"
 
       - name: Upload fail reports
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: sha-utils-test-failure
